@@ -11,6 +11,11 @@ changes relative to sbcl-1.3.14:
   * enhancement: SBCL generates more debug information by default.
   * enhancement: type errors provide context information, such as which
     variable is being bound, which slot of which structure is being set.
+  * enhancement: if #+immobile-symbols is in build-time *FEATURES* (not
+    enabled by default), then symbols will never be moved in memory
+    except by SAVE-LISP-AND-DIE. Immobility has helpful implications for
+    code generation as well as interaction with foreign routines.
+    This feature can only be enabled if #+immobile-space is enabled.
   * defaults change: sb-ext:*disassemble-annotate* default to NIL, due to its
     poor reliability.
   * new feature: SB-LINKABLE-RUNTIME, allowing linking with extra object
